# auto202506-a

./: .env  .env.example  .gitignore  AI_BACKEND_STANDARDIZATION_PROMPT.md  ARCHIVE_COMPONENTS_REFERENCE.md  DESIGN_TOKEN_MIGRATION_CHECKLIST.md  EXECUTION_GUIDE.md  EXTERNAL_AI_NEXT_PROMPT.md  EXTERNAL_AI_SETUP.md  GameLayout_문제해결_진행상황_2025-06-22.md  GameLayout_문제해결_진행상황_2025-06-22_이전기록.md  IMMEDIATE_FIX_GUIDE.md  PROJECT_ROADMAP.md  README.md  RESPONSIVE_ONBOARDING_PLAN.md  UI_CLEANUP_CHECKLIST.md  WEEK1_COMPONENT_STATUS.md  aggregate_roads.sh  codex-startup.sh  docker-compose.yml  figme.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh  test.db  test_game.db  test_notification.db  test_rewards.db  test_unlock.db
.devcontainer/: devcontainer.json
app/: main.py  schemas.py
cc-webapp/: README.md  docker-compose.yml
cc-webapp-frontend/: index.html  package-lock.json  package.json
docs/: 013_checklist_prompt_ko.md  01_architecture_en.md  02_data_personalization_en.md  03_data_model.md  03_emotion_feedback_en.md  04_adult_rewards_en.md  05_corporate_retention_en.md  06_user_journey_en.md  07-api-endpoints.md  07_technical_implementation_en.md  08_roadmap_en.md  09-testing-guide-new.md  09-testing-guide.md  09_test_qa_en.md  10_onboarding_en.md  11_ui_ux_en.md  12_game_dev_full_checklist_ko.md  13-environment-config.md  13_checklist_prompt_ko.md  13_test_tracking_service_analysis.md  14_test_tracking_service_analysis.md  15_ai_assistant_test_guide.md  16_CCF2P 통합 환경 설정 스크립트.md  17_game.md  20250623_프론트엔드_종합_개발_가이드.md  (+34 more)
(+800 files in other folders)
