[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.0",
    "fastapi==0.115.6",
    "prometheus-fastapi-instrumentator==7.0.0",
    "psycopg2-binary==2.9.10",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn==0.32.1",
]
